# intellisearch

./: .env.sample  README.md  pyproject.toml
intellisearch/: main.py
intellisearch/query_refine/: query_refinement.py  template.txt
intellisearch/search_aggr/: aggregator.py  dataclasses.py
intellisearch/search_aggr/news/: bing_news.py  google_news.py
intellisearch/search_aggregate/: aggregator.py  dataclasses.py
intellisearch/search_aggregate/news/: bing_news.py  google_news.py
