[tool.poetry]
name = "intellisearch"
version = "0.1.0"
description = ""
authors = ["lokwkin <lokwkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
googlenewsdecoder = "^0.1.1"
aiohttp = "^3.10.3"
beautifulsoup4 = "^4.12.3"
feedparser = "^6.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
